<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

    <TextView
        android:id="@+id/caixat2"
        android:text="@string/informacao"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/vnome"
        android:layout_below="@+id/caixat2"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/nome"
        android:layout_below="@+id/vnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/vnumero"
        android:layout_below="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/numero"
        android:layout_below="@+id/vnumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/vidade"
        android:layout_below="@+id/numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idade"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/idade"
        android:layout_below="@+id/vidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/vemail"
        android:layout_below="@+id/idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/email"
        android:layout_below="@+id/vemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/vprofissao"
        android:layout_below="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profissao"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/profissao"
        android:layout_below="@+id/vprofissao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/vlocalidade"
        android:layout_below="@+id/profissao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localidade"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/localidade"
        android:layout_below="@+id/vlocalidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/vcodpostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/localidade"
        android:text="@string/codpostal"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/codpostal"
        android:layout_below="@+id/vcodpostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/vgen"
        android:text="@string/genero"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/codpostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/gen"
        android:textSize="20sp"
        android:layout_below="@id/vgen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt3"
        android:layout_below="@+id/gen"
        android:text="@string/voltar"
        android:onClick="bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />



</RelativeLayout>