<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">


        <TextView
            android:id="@+id/txtmessage"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textSize="16sp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            >
            <EditText
                android:hint="@string/hint1"
                android:id="@+id/txtinput"
                android:layout_width="300dp"
                android:inputType="text"
                android:layout_height="wrap_content"
                />
            <EditText
                android:hint="@string/hint2"
                android:id="@+id/txtinput2"
                android:layout_below="@+id/txtinput"
                android:inputType="number"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                />
            <EditText
                android:hint="@string/hint3"
                android:id="@+id/txtinput3"
                android:layout_below="@+id/txtinput2"
                android:inputType="number"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                />
            <EditText
                android:hint="@string/hint4"
                android:id="@+id/txtinput4"
                android:inputType="textEmailAddress"
                android:layout_below="@+id/txtinput3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                />
            <EditText
                android:hint="@string/hint5"
                android:id="@+id/txtinput5"
                android:inputType="text"
                android:layout_below="@+id/txtinput4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                />

            <EditText
                android:hint="@string/hint7"
                android:id="@+id/txtinput6"
                android:inputType="textPostalAddress"
                android:layout_below="@+id/txtinput5"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                />

            <Button

                android:id="@+id/btdone"
                android:layout_below="@+id/txtinput6"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Editar"
                />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>