<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaEntrada">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="138dp"
        android:layout_height="149dp"
        app:srcCompat="@android:drawable/ic_menu_call"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
         />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        />



    <Button
        android:layout_below="@+id/password"
        android:id="@+id/bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/login"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="442dp" />

    <Button
        android:layout_below="@+id/password"
        android:id="@+id/bt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/registar"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="442dp" />



</RelativeLayout>